--- a/views/campgrounds/show.ejs
+++ b/views/campgrounds/show.ejs
@@ -1,27 +1,54 @@
 <% layout('/layouts/boilerplate') %>
- <div class="row mb-3">
-    <div class="col-6 offset-3">
-           <div class="card">
-  <img src="<%= campground.image %>" class="card-img-top" alt="...">
-  <div class="card-body">
-    <h5 class="card-title"><%= campground.title %></h5>
-    <p class="card-text"><%= campground.description %></p>
+<div class="row mb-3">
+  <div class="col-6">
+    <div class="card">
+      <img src="<%= campground.image %>" class="card-img-top" alt="...">
+      <div class="card-body">
+        <h5 class="card-title"><%= campground.title %></h5>
+        <p class="card-text"><%= campground.description %></p>
+      </div>
+      <ul class="list-group list-group-flush">
+        <li class="list-group-item text-muted"><%= campground.location %></li>
+        <li class="list-group-item">₹<%= campground.price %>/night</li>
+      </ul>
+      <div class="card-body">
+        <a class="card-link btn btn-warning" href="/campgrounds/<%= campground._id %>/edit">Edit</a>
+        <form class="d-inline" action="/campgrounds/<%= campground._id %>?_method=DELETE" method="POST">
+          <button class="card-link btn btn-danger" type="submit">Delete</button>
+        </form>
+      </div>
+      <div class="card-footer text-muted">
+        2 days ago
+        <a href="/campgrounds">All Campgrounds</a>
+      </div>
+    </div>
   </div>
-  <ul class="list-group list-group-flush">
-    <li class="list-group-item text-muted"><%= campground.location %></li>
-    <li class="list-group-item">₹<%= campground.price %>/night</li>
-  </ul>
-  <div class="card-body">
-   <a  class="card-link btn btn-warning" href="/campgrounds/<%= campground._id %>/edit">Edit</a>
-    <form class="d-inline" action="/campgrounds/<%= campground._id %>?_method=DELETE" method="POST">
-        <button class="card-link btn btn-danger"type="submit">Delete</button>
+
+  <div class="col-6">
+    <form class="mt-3 mb-3 validate-form" action="/campgrounds/<%= campground._id %>/reviews" method="POST" novalidate>
+      <h2>Leave a Review</h2>
+      <div class="mb-3">
+        <label class="form-label" for="rating">Rating</label>
+        <input class="form-range" type="range" min="1" max="5" name="review[rating]" id="rating">
+      </div>
+      <div class="mb-3">
+        <label class="form-label" for="body">Review</label>
+        <textarea class="form-control" name="review[body]" rows="3" cols="30" id="body" required></textarea>
+        <div class="valid-feedback">its looks good</div>
+      </div>
+      <button class="btn btn-success">Submit</button>
     </form>
 
-  </div>
-  <div class="card-footer text-muted">
-    2 days ago
-    <a href="/campgrounds">All Campgrounds</a>
+    <% for (let review of campground.reviews) { %>
+      <div class="card mb-3">
+        <div class="card-body">
+          <h5 class="card-title">Rating: <%= review.rating %></h5>
+          <p class="card-text">Review: <%= review.body %></p>
+          <form action="/campgrounds/<%= campground._id %>/reviews/<%= review._id %>?_method=DELETE" method="POST">
+            <button class="btn btn-sm btn-danger">Delete</button>
+          </form>
+        </div>
+      </div>
+    <% } %>
   </div>
 </div>
-    </div>
- </div>
